--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "dexie": "^4.0.7",
-    "webworker": "^0.8.4"
+    "webworker": "^0.8.4",
+    "@vercel/node": "^5.5.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
