feat: Integrate Google Gemini API for AI features
Adds the `@google/genai` dependency and integrates the Gemini API into the `geminiService.ts` to provide AI-powered features like example sentences and translations. Updates `App.tsx` to utilize these new capabilities.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^19.2.0",
     "dexie": "^4.0.7",
     "webworker": "^0.8.4",
-    "@vercel/node": "^5.5.5"
+    "@vercel/node": "^5.5.5",
+    "@google/genai": "^1.29.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
