--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react-dom": "^19.2.0",
     "dexie": "^4.0.7",
     "webworker": "^0.8.4",
-    "@vercel/node": "^5.5.5",
-    "@google/genai": "^1.29.0"
+    "@vercel/node": "^5.5.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
